Fixed Blog Link Alignment

--- a/WebContent/assets/css/joanedenisev1.css
+++ b/WebContent/assets/css/joanedenisev1.css
@@ -102,7 +102,8 @@ body {
     text-transform: uppercase;
     color: #222222; }
   #mainNav .navbar-nav > li.nav-item > a.nav-link,
-  #mainNav .navbar-nav > li.nav-item > a.nav-link:focus {
+  #mainNav .navbar-nav > li.nav-item > a.nav-link:focus,
+  #mainNav .navbar-nav > li.dropdown {
     font-size: 13px;
     font-weight: 700;
     text-transform: uppercase;
